--- a/docs/run/advanced-runtime-options.mdx
+++ b/docs/run/advanced-runtime-options.mdx
@@ -212,7 +212,7 @@ See the Optimization level table in the
 [Runtime compilation topic](configure-runtime-compilation#set-the-optimization-level) for further details.
 
 <Tabs>
-  <TabItem value="PrimV2" label="V2 Estimator">
+  <TabItem value="PrimV2" label="Estimator V2">
    The optimization level option is a "first-level option".  Sampler V2 does not currently support `optimization_level`.
 
 ```python
@@ -270,8 +270,8 @@ algorithm.  These methods can be set through the `resilience_level` option.  For
 [Configure error mitigation topic](configure-error-mitigation).
 
 <Tabs>
-  <TabItem value="PrimV2" label="V2 Estimator">
-With V2 Estimator, you can set resilience levels 0-2 and you can also turn on and off various error mitigation settings for fine tuning. 
+  <TabItem value="PrimV2" label="Estimator V2">
+With Estimator V2, you can set resilience levels 0-2 and you can also turn on and off various error mitigation settings for fine tuning. 
 
 ```python
 estimator = Estimator(backend=backend)
