--- a/docs/run/primitives-examples.mdx
+++ b/docs/run/primitives-examples.mdx
@@ -33,7 +33,7 @@ Use Estimator to determine the expectation value of a single circuit-observable 
 
 
 <Tabs>
-  <TabItem value="EstimatorV2" label="V2 Estimator">
+  <TabItem value="EstimatorV2" label="Estimator V2">
 ```python 
 import numpy as np
 from qiskit.circuit.library import IQP
@@ -101,7 +101,7 @@ print(f" > Metadata: {result.metadata}")
 Use Estimator to determine the expectation values of multiple circuit-observable pairs.
 
 <Tabs>
-  <TabItem value="EstimatorV2" label="V2 Estimator">
+  <TabItem value="EstimatorV2" label="Estimator V2">
 ```python
 import numpy as np
 
@@ -187,7 +187,7 @@ print(f" > Expectation values: {result.values}")
 Use Estimator to run three experiments in a single job, leveraging parameter values to increase circuit reusability.
 
 <Tabs>
-  <TabItem value="EstimatorV2" label="V2 Estimator">
+  <TabItem value="EstimatorV2" label="Estimator V2">
 ```python 
 import numpy as np
 
@@ -280,7 +280,7 @@ print(f" > Expectation values: {result.values}")
 Explore sessions and advanced options to optimize circuit performance on quantum systems.
 
 <Tabs>
-  <TabItem value="EstimatorV2" label="V2 Estimator">
+  <TabItem value="EstimatorV2" label="Estimator V2">
 ```python
 import numpy as np
 from qiskit.circuit.library import IQP
@@ -387,7 +387,7 @@ Use Sampler to return the measurement outcome as a quasi-probability distributio
    **counts** (V2) of a single circuit.  
 
 <Tabs>
-  <TabItem value="SamplerV2" label="V2 Sampler">
+  <TabItem value="SamplerV2" label="Sampler V2">
 ```python
 import numpy as np
 from qiskit.circuit.library import IQP
@@ -450,7 +450,7 @@ Use Sampler to return the measurement outcome as a quasi-probability distributio
    **counts** (V2) of multiple circuits in one job.
 
 <Tabs>
-  <TabItem value="SamplerV2" label="V2 Sampler">
+  <TabItem value="SamplerV2" label="Sampler V2">
 ```python
 import numpy as np
 from qiskit.circuit.library import IQP
@@ -521,7 +521,7 @@ Run several experiments in a single job, leveraging parameter values to increase
 
 
 <Tabs>
-  <TabItem value="SamplerV2" label="V2 Sampler">
+  <TabItem value="SamplerV2" label="Sampler V2">
 ```python 
 import numpy as np
 from qiskit.circuit.library import RealAmplitudes
@@ -599,7 +599,7 @@ print(f" > Quasi-probability distribution: {result.quasi_dists}")
 Explore sessions and advanced options to optimize circuit performance on quantum systems.
 
 <Tabs>
-  <TabItem value="SamplerV2" label="V2 Sampler">
+  <TabItem value="SamplerV2" label="Sampler V2">
 ```python
 import numpy as np
 from qiskit.circuit.library import IQP
