--- a/docs/run/run-jobs-in-session.mdx
+++ b/docs/run/run-jobs-in-session.mdx
@@ -221,7 +221,7 @@ Session status can be one of the following:
 For a comprehensive overview of a session's configuration and status, use the  `session.details() method`. 
 
 <Tabs>
-  <TabItem value="EstimatorV2" label="V2 Estimator">
+  <TabItem value="EstimatorV2" label="Estimator V2">
 ``` python
 from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator
 
