--- a/docs/run/primitives-get-started.mdx
+++ b/docs/run/primitives-get-started.mdx
@@ -234,7 +234,7 @@ print(f"  > Metadata: {result.metadata[0]}")
 <span id="test-locally"></span>
 ## Test locally
 
-Quantum simulators should be used to help develop and test programs before fine-tuning them and sending them to real quantum hardware. This can be done with good performance and efficiency on local simulators. 
+Quantum simulators should be used to help develop and test programs before fine-tuning them and sending them to real quantum hardware. Local simulators can do this with good performance and efficiency. 
 
 To use local testing mode with Qiskit Runtime, specify one of the fake backends in ``qiskit_ibm_runtime.fake_provider`` or specify a Qiskit Aer backend when instantiating a primitive or a session.  For details, see the [fake_provider API reference.](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.fake_provider)
 
