--- a/docs/api/migration-guides/local-simulators.mdx
+++ b/docs/api/migration-guides/local-simulators.mdx
@@ -42,7 +42,7 @@ Successful quantum algorithms must be adapted to exploit the capabilities of qua
 
 ## When should simulators be used?
 
-Quantum simulators should be used to help develop and test programs before fine-tuning them and sending them to quantum hardware. This can be done with good performance and efficiency on local simulators. 
+Quantum simulators should be used to help develop and test programs before fine-tuning them and sending them to quantum hardware. Local simulators can do this with good performance and efficiency. 
 
 ## Migrate to local simulators
 
