--- a/docs/api/migration-guides/local-simulators.mdx
+++ b/docs/api/migration-guides/local-simulators.mdx
@@ -95,3 +95,4 @@ If you currently use Qiskit (and not Qiskit Runtime), you can use the existing Q
 
 <Admonition>
 Qiskit Aer primitives do not support the V2 interface.  To use V2 primitives with Aer simulators, use local testing mode in Qiskit Runtime to specify `AerSimulator()`.
+</Admonition>
