--- a/docs/api/migration-guides/local-simulators.mdx
+++ b/docs/api/migration-guides/local-simulators.mdx
@@ -94,5 +94,5 @@ with Session(service=service, backend=aer_sim) as session:
 If you currently use Qiskit (and not Qiskit Runtime), you can use the existing Qiskit Aer primitives.  See [exact and noisy simulation with Qiskit Aer primitives](../../verify/simulate-with-qiskit-aer) for details. 
 
 <Admonition>
-Qiskit Aer primitives do not support the V2 interface.  To use V2 primitives with Aer simulators, use local testing mode in Qiskit Runtime to specify `AerSimulator()`.
+Qiskit Aer primitives do not support the V2 primitive interface.  To use V2 primitives with Aer simulators, use local testing mode in Qiskit Runtime to specify `AerSimulator()`.
 </Admonition>
