--- a/docs/api/migration-guides/qiskit-1.0-features.mdx
+++ b/docs/api/migration-guides/qiskit-1.0-features.mdx
@@ -449,7 +449,7 @@ sampler_v2 = StatevectorSampler()
     data_pub = result[0].data
     # Access bitstrings for the classical register "meas"
     bitstrings = data_pub.meas.get_bitstrings()
-    print(f"The number of bitstrings is: len(bitstrings)")
+    print(f"The number of bitstrings is: {len(bitstrings)}")
     # Get counts for the classical register "meas"
     counts = data_pub.meas.get_counts()
     print(f"The counts are: {counts}")
