--- a/docs/run/configure-runtime-compilation.mdx
+++ b/docs/run/configure-runtime-compilation.mdx
@@ -10,7 +10,7 @@ Runtime compilation techniques optimize and transform your circuit to minimize e
 
 Primitives let you employ runtime compilation by by choosing advanced runtime compilation options and, for Estimator V2, by setting the optimization level (`optimization_level`) option.
 
-<admonition type="note">Estimator V2 supports optimization levels 0 and 1 only. Sampler V2 does not yet support setting the optimization level.</admonition>
+<admonition type="note">Estimator V2 supports optimization levels 0 and 1 only. Sampler V2 does not support setting the optimization level.</admonition>
 
 <Admonition type="caution" title="Important">
 To ensure faster and more efficient results, as of 1 March 2024, circuits and observables need to be transformed to only use instructions supported by the system (referred to as *instruction set architecture (ISA)* circuits and observables) before being submitted to the Qiskit Runtime primitives.  See the [transpilation documentation](../transpile) for instructions to transform circuits.  Due to this change, the primitives will no longer perform layout or routing operations.  Consequently, transpilation options referring to those tasks will no longer have any effect. Users can still request that the primitives do no optimization of input circuits by specifying `optimization_level=0`.
