--- a/docs/run/configure-runtime-compilation.mdx
+++ b/docs/run/configure-runtime-compilation.mdx
@@ -26,6 +26,16 @@ service = QiskitRuntimeService(channel="ibm_cloud", channel_strategy="q-ctrl")
 
 The `optimization_level` setting specifies how much optimization to perform on the circuits. Higher levels generate more optimized circuits, at the expense of longer compile times.
 
+<Admonition type="note">
+  If using an IBM Cloud&reg; Qiskit Runtime service instance with Q-CTRL performance management enabled, there is no need to specify runtime optimization or resilience levels, as the strategy includes an automatic preset.
+  
+  Q-CTRL defaults to `optimization_level=3` and `resilience_level=1`.
+  Setting `optimization_level` or `resilience_level` equal to 0 will result in an
+  execution error. Levels 1, 2, and 3 are permitted but will not impact performance.
+  Setting other options will likewise not impact performance, and it may result in a
+  runtime warning. For more information visit the [Q-CTRL documentation](https://docs.q-ctrl.com/q-ctrl-embedded).
+</Admonition>
+
 ### V2 primitives optmization level behavior
 
 Estimator V2 does not accept levels higher than 1 and Sampler V2 does not accept `optimization_level`.
@@ -85,21 +95,12 @@ Optimization levels 2 and 3 behave identically to level 1.
 
         -   Single-qubit gate optimization
         -   Two-qubit gate optimization
-        -   Error suppression: dynamical decoupling (V1 primitives only.  For V2 primitives, you can enable it by using the `dynamical_decoupling` option.)
+        -   Error suppression: dynamical decoupling
       </Td>
     </Tr>
   </tbody>
 </Table>
 
-<Admonition type="note">
-  If using an IBM Cloud&reg; Qiskit Runtime service instance with Q-CTRL performance management enabled, there is no need to specify runtime optimization or resilience levels, as the strategy includes an automatic preset.
-  
-  Q-CTRL defaults to `optimization_level=3` and `resilience_level=1`.
-  Setting `optimization_level` or `resilience_level` equal to 0 will result in an
-  execution error. Levels 1, 2, and 3 are permitted but will not impact performance.
-  Setting other options will likewise not impact performance, and it may result in a
-  runtime warning. For more information visit the [Q-CTRL documentation](https://docs.q-ctrl.com/q-ctrl-embedded).
-</Admonition>
 
 ### Example: configure Estimator with optimization levels
 
