fix formatting and add link

--- a/docs/transpile/common-parameters.ipynb
+++ b/docs/transpile/common-parameters.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "Before transpilation, the qubits contained in your circuit are virtual qubits that don't necessarily correspond to physical qubits on the target backend. You can specify the initial mapping of virtual qubits to physical qubits using the `initial_layout` argument. Note that the final qubit layout may differ from the initial layout because the transpiler may permute qubits using swap gates or other means.\n",
     "\n",
-    "In the example below, we construct an initial layout for the FakeSherbrooke mock backend by creating a [Layout](/api/qiskit/qiskit.transpiler.Layout) object. Our layout maps the first qubit of our circuit to qubit 5 of Sherbrooke, and it maps the second qubit of our circuit to qubit 6 of Sherbrooke. Note that physical qubits are always represented by integers."
+    "In the example below, we construct an initial layout for the [`FakeSherbrooke`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.fake_provider.FakeSherbrooke#fakesherbrooke) mock backend by creating a [`Layout`](/api/qiskit/qiskit.transpiler.Layout) object. Our layout maps the first qubit of our circuit to qubit 5 of Sherbrooke, and it maps the second qubit of our circuit to qubit 6 of Sherbrooke. Note that physical qubits are always represented by integers."
    ]
   },
   {
