--- a/docs/transpile/index.mdx
+++ b/docs/transpile/index.mdx
@@ -15,7 +15,7 @@ Find more information about the pass manager stages in the [Transpiler stages](t
 
 
 ### Instruction set architecture
-In addition to reducing the depth and complexity of quantum circuits, the transpiler is designed to transform the instructions contained in a given `QuantumCircuit` to obey the **Instruction Set Architecture** (**ISA**) of a particular backend.  Circuits obeying the ISA consist only of gates that can be run on the target hardware (the target's basis gates) and contain only two-qubit gates, according to the constraints specified by the connectivity of the hardware (the target's coupling map).  When using Qiskit Runtime to submit a job to an IBM Quantum&trade; backend, the circuits must adhere to the backend's ISA. 
+In addition to reducing the depth and complexity of quantum circuits, the transpiler is designed to transform the instructions contained in a given `QuantumCircuit` to obey the **Instruction Set Architecture** (**ISA**) of a particular backend.  Circuits obeying the ISA consist only of instructions which are supported by the backend's [`Target`](../api/qiskit/qiskit.transpiler.Target.mdx) (e.g. the hardware's available basis gates, measurements, resets, or control flow operations) and comply with the constraints specified by the connectivity of the hardware (i.e. the target's coupling map).  When using Qiskit Runtime to submit a job to an IBM Quantum&trade; backend, the circuits must adhere to the backend's ISA. 
 
 
 <Admonition type="caution">
