Add deprecation warning

--- a/docs/verify/using-ibm-quantum-simulators.mdx
+++ b/docs/verify/using-ibm-quantum-simulators.mdx
@@ -8,6 +8,10 @@ description: Set up ibmq_qasm_simulator and map a basic noise model for an IBM Q
 
 Set up ``ibmq_qasm_simulator`` and map a basic noise model for an IBM Quantum&trade; hardware device in Qiskit Runtime, then use this noise model to perform noisy simulations of ``QuantumCircuits`` by using ``Sampler`` and ``Estimator`` to study the effects of errors that occur on real devices.
 
+<Admonition type="caution" title="Important">
+IBM Quantum&trade; will retire its cloud simulators on 15 May 2024. Instead, you can use local simulators through [Qiskit Runtime primitives](local-testing-mode), [Qiskit AER primitives](imulate-with-qiskit-aer), or [Qiskit reference primitives](simulate-with-qiskit-primitives). See [Migrate to local simulators](/api/migration-guides/local-simulators) for full details.
+</Admonition>
+
 ## Set up your local development environment
 
 If you haven’t already set up a Qiskit Runtime service instance, follow the steps in [Install and set up](../start/install) to do so.
