--- a/docs/verify/cloud-based-simulators.mdx
+++ b/docs/verify/cloud-based-simulators.mdx
@@ -4,8 +4,8 @@ description: Overview of available IBM Quantum cloud-based simulators
 ---
 # Available IBM Quantum simulators
 
-<Admonition type="note">
-This page gives details about the IBM Quantum&trade; cloud-based simulators. For information about the Qiskit built-in simulator, see the [Python-based simulators page in the API reference.](/api/qiskit/providers_basic_provider) You can also use the [Qiskit reference primitives](simulate-with-qiskit-primitives) for local statevector simulation.
+<Admonition type="caution" title="Important">
+IBM Quantum&trade; will retire its cloud simulators on 15 May 2024. Instead, you can use local simulators through [Qiskit Runtime primitives](local-testing-mode), [Qiskit AER primitives](imulate-with-qiskit-aer), or [Qiskit reference primitives](simulate-with-qiskit-primitives). See [Migrate to local simulators](/api/migration-guides/local-simulators) for full details.
 </Admonition>
 
 IBM Quantum features a collection of high-performance simulators for prototyping quantum circuits and algorithms.
