--- a/docs/run-new/index.mdx
+++ b/docs/run-new/index.mdx
@@ -10,7 +10,7 @@ IBM Quantum&trade; maintains the world’s most advanced fleet of quantum system
 
 ## Run on hardware
 
-Step 3 in Qiskit Patterns, "Run on hardware," centers around the [Qiskit Runtime primitives](/run/primitives) as the interface with IBM Quantum&trade; hardware, abstracting away error suppression and mitigation techniques so that you can focus more on the outcomes of your quantum computation.
+Step 3 in Qiskit Patterns, "Execute on target hardware," centers around the [Qiskit Runtime primitives](/run/primitives) as the interface with IBM Quantum&trade; hardware, abstracting away error suppression and mitigation techniques so that you can focus more on the outcomes of your quantum computation.
 
 In addition to detailed information on primitives, you can read about the available execution modes in this section. While you can always submit a single job at a time, you can also use Runtime Primitives to run jobs in a [session](/run/sessions) or in [batch mode](/run/run-jobs-batch). These execution modes assist your utility-scale jobs to run efficiently. 
 
