--- a/docs/analyze/visualize-results.ipynb
+++ b/docs/analyze/visualize-results.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2d16e04d-7dee-4e47-b009-bbd50c247fdf",
    "metadata": {},
    "source": [
-    "# Visualizing Results"
+    "# Visualize Results"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "7373f30c-a034-4abf-9dd9-71d74c8b296e",
    "metadata": {},
    "source": [
     "## Plot histogram <a name='histogram'></a>\n",
@@ -23,18 +25,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "811db4f5-91f4-4781-afae-a42ce75fe12c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit_aer import Aer\n",
     "\n",
-    "from qiskit import *\n",
+    "from qiskit import QuantumCircuit\n",
     "from qiskit.visualization import plot_histogram"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "88d4c428-decd-41f7-aaf7-1ebafea37249",
    "metadata": {},
    "outputs": [
     {
@@ -47,24 +51,21 @@
    ],
    "source": [
     "# quantum circuit to make a Bell state\n",
-    "bell = QuantumCircuit(2, 2)\n",
+    "bell = QuantumCircuit(2)\n",
     "bell.h(0)\n",
     "bell.cx(0, 1)\n",
-    "\n",
-    "meas = QuantumCircuit(2, 2)\n",
-    "meas.measure([0,1], [0,1])\n",
+    "bell.measure_all()\n",
     "\n",
     "# execute the quantum circuit\n",
-    "backend = Aer.get_backend('qasm_simulator') # the device to run on\n",
-    "circ = bell.compose(meas)\n",
-    "result = backend.run(circ, shots=1000).result()\n",
-    "counts  = result.get_counts(circ)\n",
+    "backend = Aer.get_backend(\"qasm_simulator\")  # the device to run on\n",
+    "counts = backend.run(bell, shots=1000).result().get_counts(bell)\n",
     "print(counts)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "f217705f-f930-411f-be6e-ea06eb5c877b",
    "metadata": {},
    "outputs": [
     {
@@ -85,6 +86,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "57a1f479-3a5c-4eb4-a550-48c12d8f5c17",
    "metadata": {},
    "source": [
     "### Options when plotting a histogram\n",
@@ -102,6 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "6be11ed2-5409-4993-b4e1-0d8e464fa80d",
    "metadata": {},
    "outputs": [
     {
@@ -118,16 +121,18 @@
    ],
    "source": [
     "# Execute two-qubit Bell state again\n",
-    "second_result = backend.run(circ, shots=1000).result()\n",
-    "second_counts  = second_result.get_counts(circ)\n",
+    "second_result = backend.run(bell, shots=1000).result()\n",
+    "second_counts = second_result.get_counts(bell)\n",
+    "\n",
     "# Plot results with legend\n",
-    "legend = ['First execution', 'Second execution']\n",
+    "legend = [\"First execution\", \"Second execution\"]\n",
     "plot_histogram([counts, second_counts], legend=legend)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "2c67a5f1-20c0-4d95-bfb5-37509862880f",
    "metadata": {},
    "outputs": [
     {
@@ -143,23 +148,30 @@
     }
    ],
    "source": [
-    "plot_histogram([counts, second_counts], legend=legend, sort='desc', figsize=(15,12),\n",
-    "               color=['orange', 'black'], bar_labels=False)"
+    "plot_histogram(\n",
+    "    [counts, second_counts],\n",
+    "    legend=legend,\n",
+    "    sort=\"desc\",\n",
+    "    figsize=(15, 12),\n",
+    "    color=[\"orange\", \"black\"],\n",
+    "    bar_labels=False,\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "9d58ed87-9c8f-4c5e-9944-a22e7199c39d",
    "metadata": {},
    "source": [
     "### Use the output from plot_histogram()\n",
     "\n",
-    "When using the `plot_histogram()` function, it returns a `matplotlib.Figure` for the rendered visualization. Jupyter notebooks understand this return type and render it properly, but when running outside of Jupyter,this feature is not automatic. However, the `matplotlib.Figure` class natively has methods to both display and save the visualization. You can call `.show()` on the returned object from `plot_histogram()` to open the image in a new window (assuming your configured matplotlib backend is interactive). Alternatively, call `.savefig('out.png')` to save the figure to `out.png`. The `savefig()` method takes a path so you can adjust the location and filename where you're saving the output."
+    "The `plot_histogram()` function returns a `matplotlib.Figure` which Jupyter notebooks understand and display below the cell. When running outside of Jupyter, use `matplotlib.Figure` methods to display and save the visualization. Calling `.show()` on the returned object from `plot_histogram()` opens the image in a new window (assuming your configured matplotlib backend is interactive). Alternatively, calling `.savefig('out.png')` saves the figure to `out.png`. The `savefig()` method takes a path so you can adjust the location and filename where you're saving the output."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qiskit-1.0-testing",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -173,9 +185,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
