--- a/docs/run/primitives-get-started.mdx
+++ b/docs/run/primitives-get-started.mdx
@@ -42,7 +42,7 @@ backend = service.least_busy(operational=True, simulator=False, min_num_qubits=1
 ```
 
 <Admonition type="note">
-To try out your program locally before running on real hardware, see [Test locally.](#test-locally) 
+To try out your program locally before running on real hardware, see [Test locally.](../verify/local-testing-mode) 
 </Admonition>
 
 ### 2. Create a circuit and an observable
