--- a/docs/build-new/quantum-info-visualizations.ipynb
+++ b/docs/build-new/quantum-info-visualizations.ipynb
@@ -294,6 +294,8 @@
   }
  ],
  "metadata": {
+  "title": "Quantum information visualizations",
+  "description": "Visualize state vectors and density matrices using Qiskit",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
