--- a/docs/api/migration-guides/local-simulators.mdx
+++ b/docs/api/migration-guides/local-simulators.mdx
@@ -44,11 +44,12 @@ Quantum simulators should be used to help develop and test programs before fine-
 
 ## Migrate to local simulators
 
-To replace cloud simulators, you can now use local testing mode instead. Depending on your needs, there are several ways to use local testing mode. 
+With Qiskit Runtime 0.22.0 or later, you can use local testing mode to replace cloud simulators. Depending on your needs, there are several ways to use local testing mode.  To use local testing mode, specify one of the fake backends in ``qiskit_ibm_runtime.fake_provider`` or specify a Qiskit Aer backend when instantiating a primitive or a session. 
+  
 
 ### Fake backends
  
-To use local testing mode, specify one of the fake backends in ``qiskit_ibm_runtime.fake_provider`` or specify a Qiskit Aer backend when instantiating a primitive or a session.  For details on fake backends, see the [fake_provider API reference.](/api/qiskit-ibm-runtime/fake_provider)
+The [fake backends](/api/qiskit-ibm-runtime/fake_provider) mimic the behaviors of IBM Quantum systems by using system snapshots. The system snapshots contain important information about the quantum system, such as the coupling map, basis gates, and qubit properties, which are useful for testing the transpiler and performing noisy simulations of the system.
 
 ```python
 from qiskit.circuit.library import RealAmplitudes
@@ -74,9 +75,9 @@ result = sampler.run([(isa_qc)]).result()
 
 ### AerSimulator
 
-You can use local testing mode to use simulators from [Qiskit Aer](/verify/simulate-with-qiskit-aer), which allow you to model noise.
+You can use local testing mode with simulators from [Qiskit Aer](/verify/simulate-with-qiskit-aer), which provides higher-performance simulation that can handle larger circuits and [custom noise models](/verify/building_noise_models.ipynb). It also supports Clifford simulation mode, which can efficiently simulate Clifford circuits with a large number of qubits. 
 
-Example without noise:
+Example without noise and with sessions:
 
 ```python
 from qiskit_aer import AerSimulator
