Apply suggestions from code review
Co-authored-by: Jessie Yu <jessieyu@us.ibm.com>
Co-authored-by: Abby Mitchell <23662430+javabster@users.noreply.github.com>

--- a/docs/verify/cloud-based-simulators.mdx
+++ b/docs/verify/cloud-based-simulators.mdx
@@ -5,7 +5,7 @@ description: Overview of available IBM Quantum cloud-based simulators
 # Available IBM Quantum simulators
 
 <Admonition type="caution" title="Important">
-IBM Quantum&trade; will retire its cloud simulators on 15 May 2024. Instead, you can use local simulators through [Qiskit Runtime primitives](local-testing-mode), [Qiskit AER primitives](simulate-with-qiskit-aer), or [Qiskit reference primitives](simulate-with-qiskit-primitives). See [Migrate to local simulators](/api/migration-guides/local-simulators) for full details.
+IBM Quantum&trade; will retire its cloud simulators on 15 May 2024. Instead, you can use local simulators through [Qiskit Runtime primitives](local-testing-mode), [Qiskit Aer primitives](simulate-with-qiskit-aer), or [Qiskit reference primitives](simulate-with-qiskit-primitives). See [Migrate to local simulators](/api/migration-guides/local-simulators) for full details.
 </Admonition>
 
 IBM Quantum features a collection of high-performance simulators for prototyping quantum circuits and algorithms.
