--- a/docs/verify/local-testing-mode.mdx
+++ b/docs/verify/local-testing-mode.mdx
@@ -6,7 +6,7 @@ description: Use local testing mode to simulate quantum hardware in Qiskit Runti
 <span id="test-locally"></span>
 # Qiskit Runtime local testing mode
 
-Quantum simulators should be used to help develop and test programs before fine-tuning them and sending them to real quantum hardware. Local simulators can do this with good performance and efficiency.  Clifford circuits can be simulated very efficiently, and results can be verified. This is useful to give confidence in an experiment.
+Quantum simulators can be used to help develop and test programs before fine-tuning them and sending them to real quantum hardware. Local simulators can do this with good performance and efficiency.  Clifford circuits can be simulated very efficiently, and results can be verified. This is useful to give confidence in an experiment.
 
 Local testing mode is available with Qiskit Runtime 0.22.0 or later. To use local testing mode, specify one of the fake backends in ``qiskit_ibm_runtime.fake_provider`` or specify a Qiskit Aer backend when instantiating a primitive or a session.  For details, see the [fake_provider API reference.](/api/qiskit-ibm-runtime/fake_provider)
 
